--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="resume">
         <div class="resume-part">
             <h2>My Resume</h2>
-            <p>You can access more detailed information about my CV through the link below. Let me give you a little information about my resume. Among the awards I wrote about receiving, the ones that mention kelzebra are the parts where I use my own nickname and write <span>for fun.</span> <a href="https://mustafapeksen.github.io/Capstone1/">My resume page is here.</a></p>
+            <p>You can access more detailed information about my CV through the link below. Let me give you a little information about my resume. Among the awards I wrote about receiving, the ones that mention kelzebra are the parts where I use my own nickname and write <span>for fun.</span> <a href="https://mustafapeksen.github.io/my-resume/">My resume page is here.</a></p>
             <h2>Portfolio</h2>
             <p>Instead of posting my work here, you can access my work through the link I will give here for now. <a href="https://mustafapeksen.github.io/html-portfolio/">My portfolio page is here</a></p>       
         </div>
